--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,11 @@
             "Soap\\CachedEngine\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "SoapTest\\CachedEngine\\": "tests/"
+        }
+    },
     "authors": [
         {
             "name": "Toon Verwerft",
@@ -16,15 +21,13 @@
     ],
     "require": {
         "php": "~8.1.0 || ~8.2.0 || ~8.3.0",
-        "php-soap/engine": "2.9.0"
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "SoapTest\\CachedEngine\\": "tests/"
-        }
+        "php-soap/engine": "2.9.0",
+        "psr/cache": "^3.0",
+        "psr/cache-implementation": "^3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5",
-        "vimeo/psalm": "^5.9"
+        "phpunit/phpunit": "^10.0",
+        "vimeo/psalm": "^5.9",
+        "symfony/cache": "^7.0 || ^6.4"
     }
 }
