--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     ],
     "require": {
         "php": "~8.1.0 || ~8.2.0 || ~8.3.0",
-        "php-soap/engine": "2.9.0",
+        "php-soap/engine": "^2.9.0",
         "psr/cache": "^3.0",
         "psr/cache-implementation": "^3.0"
     },
